--- a/desktop-app/index.html
+++ b/desktop-app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 	<head>
-		<title>Smart Home Panel</title>
+		<title>Smart Home - Dashboard</title>
 		<meta name="viewport" content="width=400px" />
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,700i" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900" rel="stylesheet">
@@ -9,6 +9,9 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+	<div id="electron-titlebar" class="drag" platform="linux">
+		<div id="titleText">DASHBOARD</div>
+	</div>
 
 	<div id="textBody">
 		<p id="tempText">TEMPERATURE</p>
@@ -33,6 +36,8 @@
 
 
 		<script type="text/javascript">
+			const titlebar = require('electron-titlebar');
+
 			var socket = io.connect('http://192.168.0.101:8080/');
 
 			socket.on('led', function (data) {
